tests/snapshots/test_runner__tests__compiler__typecheck__case_exhaustiveness_boolean_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
function and (x: Boolean, y: Boolean): Boolean
  switch ({ x, y }) {
    case { x: true, y: true }: true
    case { x: false, y: true }: false
  }

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_boolean_2.kk:2:3
  │
2 │   switch ({ x, y }) {
  │   ^^^^^^ Non-exhaustive cases
  │
  = Missing case(s):

      case { x: true, y: false }:
      case { x: false, y: false }:
